.provarCaches/00D410000011HE0EAM/objects/rstkf__apwhttxn__c.object
<CustomObject>
    <description>apwhttxn__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Internal use only</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_amtpaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_amtwht__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WHT Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_apapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Txn</label>
        <referenceTo>rstkf__apapplic__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_apwht__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WHT Class</label>
        <referenceTo>rstkf__apwht__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_apwhtcert__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certificate Number</label>
        <referenceTo>rstkf__apwhtcert__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_apwhtreturn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WHT Return Number</label>
        <referenceTo>rstkf__apwhtreturn__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_apwhtretvend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WHT Return Vendor</label>
        <referenceTo>rstkf__apwhtretvend__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_invdate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_paydate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_paysessvend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Payment Selection Session Vendor for this withholding tax Transaction</inlineHelpText>
        <label>Payment Transaction</label>
        <referenceTo>rstkf__paysessvend__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_povendcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_txnid__c</fullName>
        <externalId>true</externalId>
        <label>WHT Transaction ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_whtglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WHT Liability Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Withholding Tax Transactions</relationshipLabel>
        <relationshipName>apwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhttxn_whtpct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WHT Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apwhttxn_txnid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Withholding Tax Transaction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Tax Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>